src/parse/snapshots/vfpl__parse__test__add_number.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    ArithmeticOp {
        span: Span {
            start: 0,
            end: 0,
        },
        expr: Literal(
            Literal {
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: Int(
                    0,
                ),
            },
        ),
        var: "counter",
        kind: Add,
    },
)
