src/parse/snapshots/vfpl__parse__test__add_stmt.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    Add(
        ArithmeticOp {
            span: Span {
                start: 0,
                end: 0,
            },
            expr: Literal(
                Literal {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    kind: Int(
                        0,
                    ),
                },
            ),
            var: "A",
            kind: Add,
        },
    ),
)
