src/parse/snapshots/vfpl__parse__test__break_stmt.snap
---
source: src/parse/test.rs
expression: parsed

---
Err(
    ParseError {
        span: Span {
            start: 0,
            end: 0,
        },
        message: "Cannot use break outside of while",
    },
)
