src/parse/snapshots/vfpl__parse__test__call_three_args.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    Call {
        span: Span {
            start: 0,
            end: 0,
        },
        fn_name: "ternary",
        args: CallArgs {
            span: Span {
                start: 0,
                end: 0,
            },
            args: [
                CallArg {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    expr: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: True,
                        },
                    ),
                    name: "cond",
                },
                CallArg {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    expr: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: Int(
                                0,
                            ),
                        },
                    ),
                    name: "then",
                },
                CallArg {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    expr: Literal(
                        Literal {
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                            kind: Int(
                                3,
                            ),
                        },
                    ),
                    name: "else",
                },
            ],
        },
    },
)
