src/parse/snapshots/vfpl__parse__test__fn_decl_three_param_with_body.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    FnDecl {
        span: Span {
            start: 0,
            end: 0,
        },
        name: "add",
        params: FnParams {
            span: Span {
                start: 0,
                end: 0,
            },
            params: [
                TypedIdent {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    name: "_",
                    ty: Ty {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        kind: Absent,
                    },
                },
                TypedIdent {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    name: "a",
                    ty: Ty {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        kind: NoValue,
                    },
                },
                TypedIdent {
                    span: Span {
                        start: 0,
                        end: 0,
                    },
                    name: "_hi",
                    ty: Ty {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        kind: Null,
                    },
                },
            ],
        },
        fn_return: FnReturn {
            span: Span {
                start: 0,
                end: 0,
            },
            ty: Ty {
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: Absent,
            },
        },
        body: Body {
            span: Span {
                start: 0,
                end: 0,
            },
            stmts: [
                Add(
                    ArithmeticOp {
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                        expr: Literal(
                            Literal {
                                span: Span {
                                    start: 0,
                                    end: 0,
                                },
                                kind: Int(
                                    5,
                                ),
                            },
                        ),
                        var: "a",
                        kind: Add,
                    },
                ),
            ],
        },
    },
)
