src/parse/snapshots/vfpl__parse__test__ident_ty.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    Ty {
        span: Span {
            start: 0,
            end: 0,
        },
        kind: Name(
            "Integer",
        ),
    },
)
