src/parse/snapshots/vfpl__parse__test__init_variable_string.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    VarInit {
        span: Span {
            start: 0,
            end: 0,
        },
        name: TypedIdent {
            span: Span {
                start: 0,
                end: 0,
            },
            name: "name",
            ty: Ty {
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: String,
            },
        },
        init: Literal(
            Literal {
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: String(
                    "Ferris",
                ),
            },
        ),
    },
)
