src/parse/snapshots/vfpl__parse__test__mod_number.snap
---
source: src/parse/test.rs
expression: parsed

---
Ok(
    ArithmeticOp {
        span: Span {
            start: 0,
            end: 0,
        },
        expr: Literal(
            Literal {
                span: Span {
                    start: 0,
                    end: 0,
                },
                kind: Int(
                    4,
                ),
            },
        ),
        var: "counter",
        kind: Mod,
    },
)
